--- a/bmw/carview/static/styles.css
+++ b/bmw/carview/static/styles.css
@@ -88,3 +88,26 @@ body {
 .deleted {
     opacity: 20%;
 }
+
+.button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+  }
+  
+  .header {
+      padding-bottom: 30px;
+  }
+
+  .grayed_text {
+    font-size: 24px;
+    margin-left: auto; 
+    margin-right: 0;
+    vertical-align: center;
+    color: #767676
+  }
