--- a/bmw/carview/static/styles.css
+++ b/bmw/carview/static/styles.css
@@ -43,7 +43,7 @@ body {
   }
 
   .footer {
-      padding-top: 50px;
+      padding: 10px;
       font-size: 8pt;
   }
 
@@ -57,12 +57,11 @@ body {
   }
 
   .eq_container {
-      padding-top: 50px;
   }
 
   .features_container {
-    position: relative;
-    height: 70%;
+    height: 25%;
+    padding-top: 20px;
   }
 
   .row {
@@ -111,3 +110,7 @@ body {
     vertical-align: center;
     color: #767676
   }
+
+  .gray-white:nth-child(2n+1) {
+    background-color: #ebebeb;
+    }
